Flow issues between session and authentication.
Lesson:  don't mix how-to articles.  They never account for each other's approaches.

--- a/app/views/layouts/_notice_div.html.erb
+++ b/app/views/layouts/_notice_div.html.erb
@@ -1,7 +1,3 @@
-<%- flash.each do |key, msg| -%>
-  <div id="<%= key %>">
-    <p style="float:right;"><%= link_to_function 'X', "Effect.Fade('#{key}')" %></p>
-    <p><%= msg %></p>
-    <div class="clear"></div>
-  </div>
-<%- end -%>
+- flash.each do |key, msg| 
+  %p= key
+  %p= msg
