--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,8 @@
 %head
   %title Live Above the Line withe Me
   = stylesheet_link_tag    "blueprint/screen"
+  = stylesheet_link_tag("formtastic_changes")
+  = stylesheet_link_tag("formtastic")
   = javascript_include_tag "application"
   = csrf_meta_tags 
 %body
@@ -15,8 +17,13 @@
       - else
         = link_to "Sign in with Twitter", "/auth/twitter"
     .span-24
-      %p#notice flas
+      %p#notice [flash when it's done]
       - render :partial => "layouts/notice_div"
-    .span-24
+    .span-2
+      %p
+        %a= link_to "Items", items_path
+      %p
+        %a= link_to "Budgets", budgets_path 
+    .span-22.last
       = yield 
 
