--- a/app/views/items/_form.html.haml
+++ b/app/views/items/_form.html.haml
@@ -1,10 +1,4 @@
-= form_for @item do |f|
-  -if @item.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@item.errors.count, "error")} prohibited this item from being saved:"
-      %ul
-        - @item.errors.full_messages.each do |msg|
-          %li= msg
-
-  .actions
-    = f.submit 'Save'
+= semantic_form_for @item do |f|
+  - f.inputs do
+    = f.input :name, :as => :string
+  .actions= f.buttons :commit
