--- a/app/views/items/_form.html.haml
+++ b/app/views/items/_form.html.haml
@@ -1,4 +1,11 @@
 = semantic_form_for @item do |f|
   - f.inputs do
     = f.input :name, :as => :string
-  .actions= f.buttons :commit
+    = f.input :value
+    = f.input :item_type, :as => :radio, :collection => ["Income", "Expense"]
+    = f.input :period_type, :as => :radio, :collection => ["Day of Month", "Periodic", "Unique"]
+    = f.input :period
+    = f.input :period_start, :as => String
+    = f.input :day
+    = f.input :unique_date
+    .actions= f.buttons :commit
