--- a/app/views/items/edit.html.haml
+++ b/app/views/items/edit.html.haml
@@ -2,6 +2,8 @@
 
 = render 'form'
 
+= link_to 'Destroy', @item, :confirm => 'Are you sure?', :method => :delete
+
 = link_to 'Show', @item
 \|
 = link_to 'Back', items_path
