--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -2,15 +2,17 @@
 
 %table
   %tr
-    %th
-    %th
-    %th
+    %th Name
+    %th Next Date
+    %th Value
 
   - @items.each do |item|
     %tr
-      %td= link_to 'Show', item
-      %td= link_to 'Edit', edit_item_path(item)
-      %td= link_to 'Destroy', item, :confirm => 'Are you sure?', :method => :delete
+      %td= link_to item.name, item
+      %td= "Next Appearance"
+      %td.span-3.dollar-value= number_to_currency(item.value) + tag_value(item.item_type)
+				
+
 
 %br
 
