Bringing this baby back online

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,6 +20,7 @@
     //.span-24
     //  %p#notice [flash when it's done]
     //  - render :partial => "layouts/notice_div"
+    .span-24.pad-2
     .span-2
       %p
         %a= link_to "Items", items_path
