Fixing omniauth to work with  well anything :

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,13 +10,13 @@
   = csrf_meta_tags 
 %body
   .container
-    //.span-24
-    //  - if current_user
-    //    Welcome 
-    //    = current_user.name
-    //    = link_to "Sign Out", signout_path
-    //  - else
-    //    = link_to "Sign in with Twitter", "/auth/twitter"
+    .span-24
+      - if current_user
+        Welcome 
+        = current_user.name
+        = link_to "Sign Out", signout_path
+      - else
+        = link_to "Sign in with Twitter", "/auth/twitter"
     //.span-24
     //  %p#notice [flash when it's done]
     //  - render :partial => "layouts/notice_div"
