Switching to simpler built in authentication

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,7 +16,7 @@
         = current_user.name
         = link_to "Sign Out", signout_path
       - else
-        = link_to "Sign in with Twitter", "/auth/twitter"
+        = link_to "Sign in ", "/users/new"
     //.span-24
     //  %p#notice [flash when it's done]
     //  - render :partial => "layouts/notice_div"
