--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,10 +13,11 @@
     .span-24
       - if current_user
         Welcome 
-        = current_user.name
-        = link_to "Sign Out", signout_path
+        = current_user.email
+        = link_to "Log Out", log_out_path
       - else
-        = link_to "Sign in ", "/users/new"
+        = link_to "Sign Up ", "/users/new"
+        = link_to "Log In ", log_in_path
     //.span-24
     //  %p#notice [flash when it's done]
     //  - render :partial => "layouts/notice_div"
