--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,20 +1,15 @@
 %h1 Sign Up
 
-= form_for @user do |f|
-  = if @user.errors.any?
+= semantic_form_for @user do |f|
+  - if @user.errors.any?
     .error_messages
       %h2 Form is invalid
       %ul
         = for message in @user.errors.full_messages
           %li= message
-  .field
-    = f.label :email
-    = f.text_field :email
-  .field
-    = f.label :password
-    = f.password_field :password
-  .field
-    = f.label :password_confirmation
-    = f.password_field :password_confirmation
-  .actions
+  = f.inputs do
+    = f.input :email
+    = f.input :password
+    = f.input :password_confirmation
+  = f.actions do
     = f.submit
