--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
 %head
   %title Live Above the Line withe Me
   = stylesheet_link_tag    "blueprint/screen", :media => 'screen'
-  = stylesheet_link_tag("formtastic_changes")
+  / = stylesheet_link_tag("formtastic_changes")
   = stylesheet_link_tag("formtastic")
   = stylesheet_link_tag    "application", :media => 'screen'
   = javascript_include_tag "application"
