Building in the date picker for the item.
TODO: Simplify the date selection to a pattern, ala Nest heat controller

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,9 +4,10 @@
   %title Live Above the Line withe Me
   = stylesheet_link_tag    "blueprint/screen", :media => 'screen'
   / = stylesheet_link_tag("formtastic_changes")
-  = stylesheet_link_tag("formtastic")
+  / = stylesheet_link_tag("formtastic")
   = stylesheet_link_tag    "application", :media => 'screen'
   = javascript_include_tag "application"
+  = javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js", "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.1/jquery-ui.min.js", "application" 
   = csrf_meta_tags 
 %body
   .container
