--- a/app/views/items/_form.html.haml
+++ b/app/views/items/_form.html.haml
@@ -2,10 +2,7 @@
   = f.inputs do
     = f.input :name, :as => :string
     = f.input :value
-    = f.input :item_type, :as => :radio, :collection => ["Income", "Expense"]
-    = f.input :period_type, :as => :radio, :collection => ["Day of Month", "Periodic", "Unique"]
-    = f.input :period
-    = f.input :period_start, :as => String
-    = f.input :day
-    = f.input :unique_date
+    = f.input :item_type, :as => :radio, :collection => ["In", "Out"]
+    = f.input :period_type, :as => :select, :collection => ["Monthly", "Bi-weekly", "Weekly", "Once"]
+    = f.input :next_date, :as => :string, (data-behaviour =>'datepicker')
   = f.actions 
