--- a/app/views/items/_form.html.haml
+++ b/app/views/items/_form.html.haml
@@ -3,6 +3,6 @@
     = f.input :name, :as => :string
     = f.input :value
     = f.input :item_type, :as => :radio, :collection => ["In", "Out"]
-    = f.input :period_type, :as => :select, :collection => ["Monthly", "Bi-weekly", "Weekly", "Once"]
-    = f.input :next_date, :as => :string, (data-behaviour =>'datepicker')
+    #dp1
+      = f.input :next_date, :as => :string
   = f.actions 
