--- a/app/views/items/edit.html.haml
+++ b/app/views/items/edit.html.haml
@@ -1,8 +1,8 @@
 %h1 Editing item
 
-= render 'form'
+.span-24= render 'form'
 
-= link_to 'Destroy', @item, :confirm => 'Are you sure?', :method => :delete
+.span-22= link_to 'Destroy', @item, :confirm => 'Are you sure?', :method => :delete
 
 = link_to 'Show', @item
 \|
