--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -4,7 +4,6 @@
  * the top of the compiled file, but it's generally better to create a new file per style scope.
  *= require_self
  *= require_tree . 
- *= require bootstrap-datepicker
 */
 
 #header {
@@ -16,4 +15,5 @@
 
 #login {
   text-align: right;
+  background-color: #FFEAA7;
   }
