--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,8 @@
   = stylesheet_link_tag("formtastic")
   = stylesheet_link_tag    "application", :media => 'screen'
   = javascript_include_tag "application"
-  = javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js", "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.1/jquery-ui.min.js", "application" 
+  = javascript_include_tag 'jquery', 'rails', 'application'
+  = javascript_include_tag "jquery-ui.min.js", "application"
   = csrf_meta_tags 
 %body
   .container
