--- a/app/views/items/edit.html.haml
+++ b/app/views/items/edit.html.haml
@@ -2,8 +2,8 @@
 
 .span-24= render 'form'
 
-.span-22= link_to 'Destroy', @item, :confirm => 'Are you sure?', :method => :delete
+/ .span-22= link_to 'Destroy', @item, :confirm => 'Are you sure?', :method => :delete
+.span-22= link_to 'Destroy', item_path(@item, :destroy => true), :confirm => 'Are you sure?', :method => :delete
 
 = link_to 'Show', @item
-\|
 = link_to 'Back', items_path
