--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -5,7 +5,7 @@
   .span-5.dollar-value
     %h3
       = @item.value 
-      = tag_value(@item.item_type) 
+      = tag_value(@item.direction) 
   %p - 
   .span-20
     %strong.span-4 Next date
